chore: clean deprecated api